# qat-shim

./: Cargo.toml  build.rs
shim/: bindings_umbrella.h  shim.c  shim.h
src/: lib.rs
tests/: qat_hw.rs
